# serializer version: 1
# name: test_device_tracker[ex30_2024][device_tracker.volvo_ex30_none-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.volvo_ex30_none',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'volvo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'location',
    'unique_id': 'yv1abcdefg1234567_location',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_tracker[ex30_2024][device_tracker.volvo_ex30_none-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'entity_picture': 'https://wizz.volvocars.com/images/2024/123/v2/exterior/studio/right/transparent_exterior-studio-right_0000000000000000000000000000000000000000.png?client=public-api-engineering&w=1920',
      'friendly_name': 'Volvo EX30 None',
      'gps_accuracy': 0,
      'latitude': 57.72537482589284,
      'longitude': 11.849843629550225,
      'source_type': <SourceType.GPS: 'gps'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.volvo_ex30_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_home',
  })
# ---
# name: test_device_tracker[s90_diesel_2018][device_tracker.volvo_s90_none-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.volvo_s90_none',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'volvo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'location',
    'unique_id': 'yv1abcdefg1234567_location',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_tracker[s90_diesel_2018][device_tracker.volvo_s90_none-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Volvo S90 None',
      'gps_accuracy': 0,
      'latitude': 57.72537482589284,
      'longitude': 11.849843629550225,
      'source_type': <SourceType.GPS: 'gps'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.volvo_s90_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_home',
  })
# ---
# name: test_device_tracker[xc40_electric_2024][device_tracker.volvo_xc40_none-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.volvo_xc40_none',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'volvo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'location',
    'unique_id': 'yv1abcdefg1234567_location',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_tracker[xc40_electric_2024][device_tracker.volvo_xc40_none-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'entity_picture': 'https://cas.volvocars.com/image/dynamic/MY24_0000/123/exterior-v4/_/default.png?market=se&client=public-api-engineering&angle=1&bg=00000000&w=1920',
      'friendly_name': 'Volvo XC40 None',
      'gps_accuracy': 0,
      'latitude': 57.72537482589284,
      'longitude': 11.849843629550225,
      'source_type': <SourceType.GPS: 'gps'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.volvo_xc40_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_home',
  })
# ---
# name: test_device_tracker[xc90_petrol_2019][device_tracker.volvo_xc90_none-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.volvo_xc90_none',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'volvo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'location',
    'unique_id': 'yv1abcdefg1234567_location',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_tracker[xc90_petrol_2019][device_tracker.volvo_xc90_none-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'entity_picture': 'https://cas.volvocars.com/image/vbsnext-v4/exterior/MY17_0000/123/_/default.png?market=se&client=public-api-engineering&angle=1&bg=00000000&w=1920',
      'friendly_name': 'Volvo XC90 None',
      'gps_accuracy': 0,
      'latitude': 57.72537482589284,
      'longitude': 11.849843629550225,
      'source_type': <SourceType.GPS: 'gps'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.volvo_xc90_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_home',
  })
# ---
